# SCI-Solver_FEM

./: .gitignore  License.md  README.md  readme_build.txt
example_data/: CubeMesh_size256step16.ele  sphere_266verts.ply
matrixdata/: CubeMesh_size256step16.node  CubeMesh_size256step16_correct.ele
src/: CMakeLists.txt  CTestConfig.cmake  CodeCoverage.cmake  FEMSolver.cu  FEMSolver.h  cuda_compute_capability.c
src/configs/: F  K  PCGF  PCGV  PCGVGS  PCGW  SMOOTHER_ONLY  V  W
src/core/: AggMIS_Types.h  CMakeLists.txt  allocator.h  amg.h  amg_level.h  amg_signal.h  convergence.h  cutil.h  register.h  setup_solver.h
src/core/AggMIS/: AggMIS_Aggregation_CPU.h  AggMIS_Aggregation_GPU.h  AggMIS_MIS_GPU.h  AggMIS_MergeSplitConditioner_CPU.h  AggMIS_Types.h
src/core/FEM/: .cvsignore  FEM2D.h  FEM3D.h
src/core/aggmis/: CMakeLists.txt
src/core/aggmis/cuda/: AggMIS_Aggregation_CPU.cu  AggMIS_Aggregation_GPU.cu  AggMIS_BasicTest.cu  AggMIS_FileIO.cu  AggMIS_GraphHelpers.cu  AggMIS_IOHelpers.cu  AggMIS_MIS_CPU.cu  AggMIS_MIS_GPU.cu  AggMIS_MergeSplitConditioner.cu  AggMIS_MergeSplitConditioner_CPU.cu  AggMIS_Metrics.cu  AggMIS_Testing.cu  AggMIS_Types.cu  FractionalTimer.cu  Timer.cu  TriMesh_connectivity.cu  TriMesh_io.cu  tetmesh.cu
src/core/aggmis/include/: AggMIS_Aggregation_CPU.h  AggMIS_Aggregation_GPU.h  AggMIS_Display.h  AggMIS_FileIO.h  AggMIS_GraphHelpers.h  AggMIS_IOHelpers.h  AggMIS_MIS_CPU.h  AggMIS_MIS_GPU.h  AggMIS_MergeSplitConditioner.h  AggMIS_MergeSplitConditioner_CPU.h  AggMIS_Metrics.h  AggMIS_Testing.h  AggMIS_Types.h  DataRecord.h  DataRecorder.h  FractionalTimer.h  TriMesh.h  Vec.h  tetmesh.h
src/core/aggmis_include/: AggMIS_Aggregation_CPU.h  AggMIS_GraphHelpers.h  AggMIS_IOHelpers.h  AggMIS_MergeSplitConditioner.h  AggMIS_Metrics.h
src/core/cuda/: AggMIS_Types.cu  ComputePermutationMethods.cu  FEM2D.cu  FEM3D.cu  FEMSolver.cu  TriMesh_connectivity.cu  aggregator.cu  allocator.cu  amg.cu  amg_config.cu  amg_level.cu  amg_signal.cu  cgcycle.cu  cuda_resources.cu  cutil.cu  gauss_seidel.cu  mis.cu  misHelpers.cu  perform_element_loop_2D.cuh  perform_element_loop_3D.cuh  randMIS.cu  randomizedMIS_GPU.cu  setup_solver.cu  smoothedMG_amg_level.cu  smoother.cu  tetmesh.cu
src/core/cycles/: cgcycle.h  vcycle.h
src/core/include/: Color.h  FEM.h  FEMSolver.h  Helper.h  Logger.h  TriMesh.h  Vec.h  allocator.h  amg.h  amg_config.h  amg_level.h  amg_signal.h  convergence.h  cuda_resources.h  cutil.h  error.h  getvalue.h  my_timer.h  register.h  setup_solver.h  tetmesh.h  timer.h  types.h  util.h
src/core/include/FEM/: FEM2D.h  FEM3D.h
src/core/include/cycles/: cgcycle.h  cycle.h  fcycle.h  vcycle.h  wcycle.h
src/core/include/smoothedMG/: smoothedMG_amg_level.h
src/core/include/smoothedMG/aggregators/: aggregator.h  mis.h  misHelpers.h
src/core/include/smoothers/: gauss_seidel.h  smoother.h
src/core/smoothedMG/: smoothedMG_amg_level.h
src/core/smoothedMG/aggregators/: .cvsignore  aggregator.h  mis.h  misHelpers.h.03.12.2012  misHelpers.h.new
src/core/smoothers/: .cvsignore
src/examples/: CMakeLists.txt  example1.cpp  example1.cu  example2.cu  example3.cu
src/test/: CMakeLists.txt  sanity.cc  sanity2D.cc  sanity3D.cc  tetVol.cc
src/test/cli/: CMakeLists.txt  cli_basic.cc
src/test/test_data/: CubeMesh_size256step16.ele  CubeMesh_size256step16.node  CubeMesh_size256step16_correct.ele  basic_output.txt  simple.ele  simple.mat  simple.node  simple.ply  simpleAns.mat  simpleTri.mat  simpleTriAns.mat  simpleTrib.mat  simpleb.mat  sphere_290verts.ply  tetVol.ele  tetVol.node  tetVolA.mat  tetVolAns.mat  tetVolb.mat
